[package]
name = "actix-utils"
version = "3.0.0-beta.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Various network related services and utilities for the Actix ecosystem"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-utils/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "actix_utils"
path = "src/lib.rs"

[dependencies]
actix-codec = { path = "../actix-codec" }
actix-rt = { path = "../actix-rt", default-features = false }
actix-service = { path = "../actix-service" }

futures-core = { version = "0.3.7", default-features = false }
futures-sink = { version = "0.3.7", default-features = false }
log = "0.4"
pin-project-lite = "0.2.0"

[dev-dependencies]
futures-util = { version = "0.3.7", default-features = false }
